--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -94,7 +94,7 @@ rpm -e --nodeps sles-release
 
 ----
 SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
-  -p sle-product-suse-manager-proxy/<productversion>/<architecture>
+  -p SUSE-Manager-Proxy/<productversion>/<architecture>
 ----
 
 . Add {productname} repositories:
@@ -103,18 +103,15 @@ SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
 ----
 SUSEConnect -p sle-module-basesystem/15.1/x86_64
 SUSEConnect -p sle-module-server-applications/15.1/x86_64
-SUSEConnect -p sle-module-suse-manager-proxy/15.1/x86_64
+SUSEConnect -p sle-module-suse-manager-proxy/4.0/x86_64
 ----
-+
-[NOTE]
-====
-Verify that you allow installing recommended packages.
+
+. Verify that you allow installing recommended packages.
 Check the settings in `/etc/zypp/zypp.conf`:
 +
 ----
 solver.onlyRequires = false
 ----
-====
 
 . Install the {productname} Proxy pattern:
 +
