--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -7,7 +7,8 @@ This is especially useful if you need to apply updates during a limited maintena
 Content Lifecycle Management allows you to select software channels as sources, adjust them as required for your environment, and thoroughly test them before installing onto your production systems.
 
 While you cannot directly modify vendor channels, you can clone them and then modify the clones by adding or removing packages and custom patches.
-You can then assign these cloned channels to test systems to ensure they work as expected and, once all tests pass, promote them to production servers.
+You can then assign these cloned channels to test systems to ensure they work as expected.
+Then, when all tests pass, you can promote them to production servers.
 
 This is achieved through a series of environments that your software channels can move through on their lifecycle.
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
