Small fixes in Content Lifecycle section (#899)
* Small fixes in Content Lifecycle management section

* Small fixes in the Content Lifecycle examples

* Update modules/administration/pages/content-lifecycle-examples.adoc

Co-Authored-By: Lana Brindley <lbrindley@suse.de>

* Update modules/administration/pages/content-lifecycle-examples.adoc

Co-Authored-By: Lana Brindley <lbrindley@suse.de>

* Update modules/administration/pages/content-lifecycle.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -9,21 +9,21 @@ Use these examples to build your own personalized implementation.
 [#create-proj-for-patch-cycle]
 == Creating a Project for a Monthly Patch Cycle
 
-A project for a monthly patch cycle consists of:
+An example project for a monthly patch cycle consists of:
 
-* Creating a filter for a project
-* Adding a filter to a project
-* Applying the filter to a new build environment
-* Excluding a patch from a project
-* Including a patch in a project
+* Creating a `By Date` filter
+* Adding the filter to the project
+* Applying the filter to a new project build
+* Excluding a patch from the project
+* Including a patch in the project
 
 
 
 [#create-a-filter]
-=== Creating a Filter for the Project
+=== Creating a `By Date` filter
 
 The ``By Date`` filter excludes all patches released after a specified date.
-This filter is useful for your CLM projects that follow a monthly patch cycle.
+This filter is useful for your content lifecycle projects that follow a monthly patch cycle.
 
 
 .Procedure: Creating the ``By Date`` Filter
@@ -56,8 +56,8 @@ For example, [systemitem]``Exclude patches by date``.
 
 
 
-[#apply-filter-to-env]
-=== Applying the Filter to the Environment
+[#apply-filter-to-project-build]
+=== Applying the Filter to a new Project Build
 
 The new filter is added to your filter list, but it still needs to be applied to the project.
 To apply the filter you need to build the first environment.
@@ -73,19 +73,13 @@ You can use messages to help track the build history.
 . Click btn:[Promote] to move the content to the next environment.
 The build will take longer if you have a large number of filters, or they are very complex.
 
-[NOTE]
-====
-When you promote content from one environment to the next, a copy of the metadata is created.
-Filters determine which metadata will be used to define your channels, as well the packages within those channels.
-====
-
 
 
 [#exclude-a-patch]
 === Excluding a Patch from the Project
 
 Tests may help you discover issues.
-When an issue is found, exclude the problem patch released before the **by date** filter.
+When an issue is found, exclude the problem patch released before the `by date` filter.
 
 .Procedure: Excluding a Patch
 
@@ -106,7 +100,7 @@ For example, [systemitem]``SUSE-15-2019-1807``.
 
 . Click btn:[Attach/Detach Filters] link, select [guimenu]``Exclude openjdk patch``, and click btn:[Save].
 
-When you rebuild a previous environment with the btn:[Build] button, the new exclude filter uses the previous [guimenu]``by date`` filter.
+When you rebuild the project with the btn:[Build] button, the new filter is used together with the [guimenu]``by date`` filter we added before.
 
 
 
@@ -120,8 +114,8 @@ You need to include this new patch into your environment.
 
 [IMPORTANT]
 ====
-Use the [guimenu]``Allow`` filters rule to select patches from a full source and add them to a previous environment.
 The [guimenu]``Allow`` filters rule overrides the exclude function of the [guimenu]``Deny`` filter rule.
+For more information, see xref:administration:content-lifecycle.adoc[].
 ====
 
 .Procedure: Including a Patch in a Project
@@ -160,10 +154,9 @@ Alternatively, create a new filter and change the assignment to the project.
 . Check if the exclude filter for ``SUSE-15-2019-1807`` can be detached from the project.
 There may be a new patch available to fix this issue.
 
-. Detach the ``include`` filter.
-The filter is included by default.
+. Detach the ``allow`` filter you added previously.
+The patch is included by default.
 
-. Complete updating your filters.
 . Rebuild the project to create a new environment with patches for the next month.
 
 
