--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -7,7 +7,8 @@ This is especially useful if you need to apply updates during a limited maintena
 Content Lifecycle Management allows you to select software channels as sources, adjust them as required for your environment, and thoroughly test them before installing onto your production systems.
 
 While you cannot directly modify vendor channels, you can clone them and then modify the clones by adding or removing packages and custom patches.
-You can then assign these cloned channels to test systems to ensure they work as expected and, once all tests pass, apply them to production servers.
+You can then assign these cloned channels to test systems to ensure they work as expected.
+Then, when all tests pass, you can promote them to production servers.
 
 This is achieved through a series of environments that your software channels can move through on their lifecycle.
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
@@ -19,7 +20,7 @@ For more specific examples, see xref:administration:content-lifecycle-examples.a
 
 == Create a Content Lifecycle Project
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and click btn:[Create Project].
 . In the [guimenu]``Label`` field, enter a label for your project.
 The [guimenu]``Label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . In the [guimenu]``Name`` field, enter a descriptive name for your project.
@@ -108,7 +109,7 @@ Building applies filters to the attached sources and clones them to the first en
 
 .Procedure: Building a Content Lifecycle Project
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and select the project you want to build.
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and select the project you want to build.
 . Review the attached sources and filters, and click btn:[Build].
 . You can monitor build progress in the [guimenu]``Environment Lifecycle`` section.
 
@@ -122,7 +123,7 @@ When the project has been built, the built sources can be sequentially promoted 
 
 .Procedure: Promoting Environments
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and select the project you want to work with.
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and select the project you want to work with.
 . In the [guimenu]``Environment Lifecycle`` section, locate the environment to promote to its successor, and click btn:[Promote].
 . You can monitor build progress in the [guimenu]``Environment Lifecycle`` section.
 
