--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy]]
-= Install {productname} Proxy (wip)
+= Install {productname} Proxy
 
 This chapter provides the required KVM settings for installation of {sles} media as the base for {productname} Proxy.
 A kernel virtual machine KVM combined with Virtual Machine Manager ([command]``virt-manager``) will be used as a sandbox for this installation.
