--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -9,7 +9,7 @@ A kernel virtual machine KVM combined with Virtual Machine Manager ([command]``v
 [[installation-proxy-requirements]]
 == SLES KVM Requirements
 
-Enter the following settings when creating a new virtual machine using [command]``virt-manager`` (replace [literal]``<version>`` with the actual version string):
+Use these settings to create a new virtual machine with [command]``virt-manager`` (replace [literal]``<version>`` with the actual version string):
 
 [cols="1,1", options="header"]
 |===
