--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -43,7 +43,7 @@ This section assumes you have previously setup an account with SCC and downloade
 .Procedure: Preparing for SLES Installation
 . In [command]``virt-manager`` select menu:File[New Virtual Machine].
 
-. Select btn:[Local install media (ISO image or CDROM)].
+. Click btn:[Local install media (ISO image or CDROM)].
 
 . Ensure btn:[Use ISO Image] is selected.
 Then click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
