--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -46,7 +46,7 @@ This section assumes you have previously setup an account with SCC and downloade
 . Click btn:[Local install media (ISO image or CDROM)].
 
 . Ensure btn:[Use ISO Image] is selected.
-Then click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
+Click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
 
 . Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
 
