--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -67,7 +67,7 @@ During the partitioning setup of the SLES installation this disk should be parti
 Select btn:[Finish] to begin the installation.
 
 Installation of {sles} will begin.
-For more information on completing an installation of {sles}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
+For more information on installing {sles}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
 
 
 
