--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -106,7 +106,7 @@ SUSEConnect -p sle-module-server-applications/15.1/x86_64
 SUSEConnect -p sle-module-suse-manager-proxy/4.0/x86_64
 ----
 
-. Verify that you allow installing recommended packages.
+. Check that you have allowed installing recommended packages.
 Check the settings in `/etc/zypp/zypp.conf`:
 +
 ----
