--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -34,8 +34,7 @@ Use these settings to create a new virtual machine with [command]``virt-manager`
 [[installation-proxy-sles-settings]]
 === SLES KVM Settings
 
-This section provides guidance on installation of {productname} Proxy
-utilizing the full installation media with KVM and [command]``virt-manager``.
+This sections guides you through the installation of {productname} Proxy utilizing the full installation media with KVM and [command]``virt-manager``.
 This section assumes you have previously setup an account with SCC and downloaded the SLES full installation media.
 
 
