--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -61,11 +61,11 @@ During the partitioning setup of the SLES installation this disk should be parti
 | 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/srv/``
 | 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/cache/``
 |===
++
+The remaining storage space will be used by the operating system for the root partition.
 
-. The remaining storage space will be used by the operating system for the root partition.
-Select btn:[Finish] to begin the installation.
+. Select btn:[Finish] to begin the installation.
 
-Installation of {sles} will begin.
 For more information on installing {sles}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
 
 
