use proper dialog title

--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -44,8 +44,7 @@ To complete the following steps, you have previously set up an account with SCC 
 
 . Click btn:[Local install media (ISO image or CDROM)].
 
-. Ensure btn:[Use ISO Image] is selected.
-Click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
+. In the [guimenu]``Create a new virtual machine`` dialog, click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
 
 . Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
 
