--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -3,7 +3,7 @@
 
 Cobbler is an installation server that allows you to perform unattended system installations.
 It can be used on server, client, or guest systems, and in virtual environments.
-On {productname} Cobbler is installed on the server.
+Cobbler is installed on the {productname} Server.
 
 [IMPORTANT]
 ====
