--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -8,7 +8,7 @@ Cobbler is installed on the {productname} Server.
 [IMPORTANT]
 ====
 {suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
-All features documented here are supported.
+Only supported features are documented here.
 ====
 
 This section explains the Cobbler features most commonly used with {productname}:
