--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -63,7 +63,7 @@ During the partitioning setup of the SLES installation this disk should be parti
 +
 The remaining storage space will be used by the operating system for the root partition.
 
-. Select btn:[Finish] to begin the installation.
+. Click btn:[Finish] to save the installation settings and begin the installation.
 
 For more information on installing {sles}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
 
