--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -1,7 +1,8 @@
 [[installation-proxy]]
 = Install {productname} Proxy
 
-This chapter provides the required KVM settings for installation of {sles} media as the base for {productname} Proxy.
+To install {productname} Proxy, you will need to start by installing {sles} media.
+This section covers the KVM settings required to perform a {sles} installation as the base for {productname} Proxy.
 A kernel virtual machine KVM combined with Virtual Machine Manager ([command]``virt-manager``) will be used as a sandbox for this installation.
 
 
