--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -3,7 +3,7 @@
 
 To install {productname} Proxy, you will need to start by installing {sles} media.
 This section covers the KVM settings required to perform a {sles} installation as the base for {productname} Proxy.
-A kernel virtual machine KVM combined with Virtual Machine Manager ([command]``virt-manager``) will be used as a sandbox for this installation.
+In this section, we use a KVM and a virtual machine manager as a sandbox for the installation.
 
 
 
