--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -35,7 +35,7 @@ Use these settings to create a new virtual machine with [command]``virt-manager`
 [[installation-proxy-sles-settings]]
 === SLES KVM Settings
 
-This sections guides you through the installation of {productname} Proxy utilizing the full installation media with KVM and [command]``virt-manager``.
+This section covers the {productname} Proxy installation, using the full installation media with KVM and [command]``virt-manager``.
 To complete the following steps, you have previously set up an account with SCC and downloaded the SLES full installation media.
 
 
