--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -36,7 +36,7 @@ Use these settings to create a new virtual machine with [command]``virt-manager`
 === SLES KVM Settings
 
 This section covers the {productname} Proxy installation, using the full installation media with KVM and [command]``virt-manager``.
-To complete the following steps, you have previously set up an account with SCC and downloaded the SLES full installation media.
+Before you begin, you will need to have created an account with {scc}, and downloaded the {sles} installation media.
 
 
 
