remove misleading statement about dhcp configuration

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -12,6 +12,9 @@ Only supported features are documented here.
 
 This section explains the Cobbler features most commonly used with {productname}:
 
+// FIXME: `cobbler sync` needs to be documented
+// mc says: This is the main functionality of cobbler in combination with SUSE Manager.
+* The [command]``cobbler sync`` command is triggered from {productname} Server and generate the TFTP boot environment
 * Installation environment analysis using the [command]``cobbler check`` command
 * Virtual machine guest installation automation with the [command]``koan`` client-side tool
 * Building installation ISOs with PXE-like menus using the [command]``cobbler buildiso`` command (for {productname} systems with x86_64 architecture)
@@ -53,8 +56,8 @@ A sync is basically a rebuild of every file cobbler touched.
 To use Cobbler for system installation with PXE, you will require a TFTP server.
 {productname} installs a TFTP server by default.
 To PXE boot systems, you will require a DHCP server, or have access to a network DHCP server.
-// ke, 2019-11-26: Maybe, we should say that this on SUMA has to be the address of the SUMA server?
-Edit the [path]``/etc/dhcp.conf`` configuration file to change [option]``next-server`` to the hostname or IP address of your Cobbler server.
+
+
 
 [IMPORTANT]
 ====
