--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -216,7 +216,7 @@ If you reinstall an already configured proxy and want to push all the files agai
 
 == Synchronize and Start the Cobbler Service
 
-The {productname} Server must be able to access the {productname} Proxy systems directly.
+When tftpsync is configured, the {productname} Server must be able to access the {productname} Proxy systems directly.
 You cannot push using a proxy.
 
 [WARNING]
