--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -351,19 +351,16 @@ For more options, such as setting hostname or IP addresses, refer to the Cobbler
 
 ////
 
-== Kickstart Templates
+== Autoinstallation Templates
 
-Kickstart files are used to automate {rhel} client installations.
-Kickstart templates are used to describe how to create Kickstart files.
-To help with creating Kickstart templates, you can create Kickstart variables within the {productname} {webui}.
-This allows you to create and manage large numbers of profiles and systems, without having to manually create Kickstart files for each.
-
-Kickstart templates are shared by various profiles and systems that can each have their own variables and values.
-These variables modify the templates, and a template engine parses the template and variables into a usable Kickstart file.
+AutoYaST or Kickstart profiles are used to automate {sle} or {rhel} client installations.
+Templates are used to describe how to create autoinstallation profiles.
+You can create autoinstallation variables within the {productname} {webui}.
+This allows you to create and manage large numbers of profiles and systems, without having to manually create profiles for each.
 
 Cobbler uses a template engine called Cheetah that provides support for templates, variables, and snippets.
 
-For more information on creating Kickstart profile variables, see xref:reference:systems/autoinst-distributions.adoc[].
+For more information on creating profiles, see xref:reference:systems/autoinst-distributions.adoc[].
 
 
 === Kickstart Template Syntax
@@ -417,10 +414,6 @@ For example:
 echo "Hello, world"
 #end some section (this is a comment)
 ----
-
-For more information about Kickstart templates and Cobbler, see
-https://cobbler.github.io/manuals/2.8.0/3/5_-_Kickstart_Templating.html.
-
 
 
 
@@ -571,10 +564,12 @@ To change the organization, log in as an Administrator of the required organizat
 ====
 
 When the feature has been enabled, any bare metal system connected to the server network will be automatically added to the organization when it is powered on.
-The process can take a few minutes, and the system will automatically shut down once it is complete.
-After the reboot, the system will appear in the [guilabel]``Systems`` list.
-Click on the name of the system to see basic information, or go to the [guilabel]``Properties``, [guilabel]``Notes``, and [guilabel]``Hardware`` tabs for more details.
+The process can take a few minutes, and the system will automatically shut down when it is complete.
+The system will now be visible in the menu:Systems[System list].
+Click on the name of the system to see basic information.
+For more details, go to the [guilabel]``Properties``, [guilabel]``Notes``, and [guilabel]``Hardware`` tabs.
 You can migrate bare metal systems to other organizations if required, using the [guilabel]``Migrate`` tab.
+
 
 
 === Provision Bare Metal Systems
