--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= SUSE Manager Documentation Repository
+= SUSE Manager Documentation Repository - Deprecated
 ifdef::env-github,backend-html5[]
 //Admonitions
 :tip-caption: :bulb:
@@ -44,8 +44,7 @@ endif::[]
 :sourcedir: .
 :imagesdir: images
 
-image:https://github.com/SUSE/doc-susemanager/workflows/build%20test%20deploy/badge.svg?branch=master["Build Status", link="https://github.com/SUSE/doc-susemanager"]
-image:https://github.com/SUSE/doc-susemanager/workflows/feature%20tests/badge.svg?branch=master["Build Status", link="https://github.com/SUSE/doc-susemanager"]
+This repository has merged with our opensource project. See https://github.com/uyuni-project/uyuni-docs
 
 [suma.doc.intro]
 == Introduction
