--- a/README.adoc
+++ b/README.adoc
@@ -44,7 +44,7 @@ endif::[]
 :sourcedir: .
 :imagesdir: images
 
-This repository has merged with our opensource project. See https://github.com/uyuni-project/uyuni-docs
+IMPORTANT: This repository has merged with our opensource project. See https://github.com/uyuni-project/uyuni-docs
 
 [suma.doc.intro]
 == Introduction
