--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -12,8 +12,6 @@ Only supported features are documented here.
 
 This section explains the Cobbler features most commonly used with {productname}:
 
-// FIXME: `cobbler sync` needs to be documented
-// mc says: This is the main functionality of cobbler in combination with SUSE Manager.
 * The [command]``cobbler sync`` command is triggered from {productname} Server and generate the TFTP boot environment
 * Installation environment analysis using the [command]``cobbler check`` command
 * Virtual machine guest installation automation with the [command]``koan`` client-side tool
@@ -38,6 +36,7 @@ Non-unique host names will cause all systems with the same host name to have the
 
 
 
+[[cobbler-configure]]
 == Configure Cobbler
 
 Cobbler configuration is primarily managed using the [path]``/etc/cobbler/settings`` file.
@@ -182,31 +181,33 @@ This will fail if you have not configured the proxies correctly.
 If you reinstall an already configured proxy and want to push all the files again, you must remove the cache file at [path]``/var/lib/cobbler/pxe_cache.json`` before you call [command]``cobbler sync``.
 ====
 
-=== [command]``cobbler sync``
 
-////
+
 === Background Information about the Synchronization Process
 
 // Taken from https://bugzilla.suse.com/show_bug.cgi?id=1141603
 // To be edited!!!
 
-A sync is basically a rebuild of every file cobbler touched.
-
-1. Run Pre-Sync-Triggers (this can be any number of shell scripts to my knowledge)
-2. Delete all files and directories which are not allowed in /var/www/cobbler
-3. Create all needed folders
-4. Delete all elements inside the folders.
-5. Generate the tftpd directory
-6. Write the DHCP files (if management is enabled)
-7. Do the same with DNS
-8. Clean the Cache
-9. If rsync management is enabled do that
-10. Run Post-Sync-Triggers (this can also be any number of shell scripts to my knowledge)
-
-////
-
+A [command]``cobbler sync`` is a rebuild of every file Cobbler touched.
 On {productname}, [command]``cobbler sync`` does the following actions:
 
+1. Run pre-sync triggers.
+This can be any number of shell scripts.
+2. Delete all files and directories that are not allowed in [path]``/var/www/cobbler/``.
+3. Create all needed directories.
+4. Delete all elements inside the directories.
+5. Create the TFTPD directory.
+6. Write the DHCP files if management is enabled.
+For more information, see <<cobbler-configure>>.
+7. Do the same with DNS.
+8. Clean up the cache.
+9. Run [command]``rsync`` if rsync management is enabled.
+10. Run post-sync triggers.
+This can be any number of shell scripts.
+
+{productname} also adds or removes, or edits systems that are in Cobbler.
+Those actions trigger a so-called lite sync process.
+This sync only touches files and directories that are related to the change which triggered it.
 
 
 
